make tabs wider to avoid wrapping bug on some browsers

--- a/htmldocroot/form.css
+++ b/htmldocroot/form.css
@@ -131,7 +131,7 @@ ul.tabs a {
     display:block;
     height: 30px;
     line-height:30px;
-    width: 250px;
+    width: 280px;
     text-align:center;
     text-decoration:none;
     color:#333;
